--- a/index.html
+++ b/index.html
@@ -362,12 +362,12 @@ title: Battle Facilities Calculator
 						<option value="9">9</option>
 						<option value="10" selected="selected">10</option>
 					</select>
-					<input class="max calc-trigger btn-input" type="checkbox" id="maxL" /><label class="btn btn-wide gen-specific g8" for="maxL" style="width: 6.3em" title="Dynamax this Pokémon?">Dynamax <img src="../_images/dmax.png" style="vertical-align: middle"></label>
+					<input class="max calc-trigger btn-input" type="checkbox" id="maxL" /><label class="btn btn-wide gen-specific g8" for="maxL" style="width: 6.3em" title="Dynamax this Pokémon?">Dynamax <img src="{{ site.baseurl }}/_images/dmax.png" style="vertical-align: middle"></label>
 				</div>
 				<div class="gen-specific g9">
                         <label>Tera Type</label>
                         <select class="tera-type terrain-trigger calc-trigger"></select>
-                        <input class="tera calc-trigger btn-input" type="checkbox" id="teraL" /><label class="btn btn-wide gen-specific g9" for="teraL" style="width: 7em" title="Terastallize this Pokémon?">Terastallize <img src="../_images/tera.png" style="vertical-align: middle"></label>
+                        <input class="tera calc-trigger btn-input" type="checkbox" id="teraL" /><label class="btn btn-wide gen-specific g9" for="teraL" style="width: 7em" title="Terastallize this Pokémon?">Terastallize <img src="{{ site.baseurl }}/_images/tera.png" style="vertical-align: middle"></label>
                     </div>
 			</div>
 			<div class="move1">
@@ -447,7 +447,7 @@ title: Battle Facilities Calculator
 		<div class="panel-body">
 			<div style="width: 3.0em; margin: 0 auto 5px;">
 				<a href="https://www.smogon.com/forums/threads/8th-generation-battle-tower-restricted-sparring-discussion-records.3656190/">
-					<img id="midimg" align="middle" src="../_images/newlogo-350px.png" alt="cant say" height="50" width="50">
+					<img id="midimg" align="middle" src="{{ site.baseurl }}/_images/newlogo-350px.png" alt="cant say" height="50" width="50">
 				</a>
 			</div>
 			<div style="width: 10.6em; margin: 0 auto 5px;" id="format" title="Select the battle format.">
@@ -628,10 +628,10 @@ title: Battle Facilities Calculator
 			</div>
 			<div class="btn-group gen-specific g7">
 				<div class="left" title="Has this Pokemon used Z-Conversion or Clangorous Soulblaze?">
-					<input class="btn-input calc-trigger" type="checkbox" id="clangL" /><label class="btn btn-xxwide" for="clangL"><img src="../_images/PZ.png"><img src="../_images/kommo.png"><br>+1 All</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="clangL" /><label class="btn btn-xxwide" for="clangL"><img src="{{ site.baseurl }}/_images/PZ.png"><img src="{{ site.baseurl }}/_images/kommo.png"><br>+1 All</label>
 				</div>
 				<div class="right" title="Has this Pokemon used Z-Conversion or Clangorous Soulblaze?">
-					<input class="btn-input calc-trigger" type="checkbox" id="clangR" /><label class="btn btn-xxwide" for="clangR"><img src="../_images/PZ.png"><img src="../_images/kommo.png"><br>+1 All</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="clangR" /><label class="btn btn-xxwide" for="clangR"><img src="{{ site.baseurl }}/_images/PZ.png"><img src="{{ site.baseurl }}/_images/kommo.png"><br>+1 All</label>
 				</div>
 			</div>
             <div class="btn-group gen-specific g8 g9">
@@ -644,18 +644,18 @@ title: Battle Facilities Calculator
             </div>
 			<div class="btn-group gen-specific g8 g9">
 				<div class="left" title="Has this Pokemon had its Weakness Policy activated?">
-					<input class="btn-input calc-trigger" type="checkbox" id="wpL" /><label class="btn btn-xxwide" for="wpL"><img src="../_images/wp.png"><br>Weakness Policy</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="wpL" /><label class="btn btn-xxwide" for="wpL"><img src="{{ site.baseurl }}/_images/wp.png"><br>Weakness Policy</label>
 				</div>
 				<div class="right" title="Has this Pokemon had its Weakness Policy activated?">
-					<input class="btn-input calc-trigger" type="checkbox" id="wpR" /><label class="btn btn-xxwide" for="wpR"><img src="../_images/wp.png"><br>Weakness Policy</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="wpR" /><label class="btn btn-xxwide" for="wpR"><img src="{{ site.baseurl }}/_images/wp.png"><br>Weakness Policy</label>
 				</div>
 			</div>
 			<div class="btn-group gen-specific g7 g9">
 				<div class="left" title="Has this Pokemon had all its stats sharply raised? (gen 9 sprites by @ezerart_/Ezerart)">
-					<input class="btn-input calc-trigger" type="checkbox" id="evoL" /><label class="btn btn-xxwide" for="evoL"><img class="evo_img1" src="../_images/eevee.png"><img class="evo_img2" src="../_images/eevium.png"><br>+2 All</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="evoL" /><label class="btn btn-xxwide" for="evoL"><img class="evo_img1" src="{{ site.baseurl }}/_images/eevee.png"><img class="evo_img2" src="{{ site.baseurl }}/_images/eevium.png"><br>+2 All</label>
 				</div>
 				<div class="right" title="Has this Pokemon had all its stats sharply raised? (gen 9 sprites by @ezerart_/Ezerart)">
-					<input class="btn-input calc-trigger" type="checkbox" id="evoR" /><label class="btn btn-xxwide" for="evoR"><img class="evo_img1" src="../_images/eevee.png"><img class="evo_img2" src="../_images/eevium.png"><br>+2 All</label>
+					<input class="btn-input calc-trigger" type="checkbox" id="evoR" /><label class="btn btn-xxwide" for="evoR"><img class="evo_img1" src="{{ site.baseurl }}/_images/eevee.png"><img class="evo_img2" src="{{ site.baseurl }}/_images/eevium.png"><br>+2 All</label>
 				</div>
 			</div>
 			<div class="btn-group gen-specific g8 g9">
@@ -703,7 +703,7 @@ title: Battle Facilities Calculator
 				<br>
 				<textarea rows="9" cols="40" id="customMon"></textarea>
 				<br>
-				<script type="text/javascript" src="../_scripts/import_custom.js"></script>
+				<script type="text/javascript" src="{{ site.baseurl }}/_scripts/import_custom.js"></script>
 				<div>
 					<button type="button" onclick="savecustom()">Save</button> <button type="button" onclick="deletecustom()">Delete Custom Sets</button> <button id="migrate" type="button" onclick="migrateOldSets()">Migrate Old Sets</button>
 					<input class="right gen-specific g8 g9" type="checkbox" id="startGimmick"><label class="right gen-specific g8 g9" for="startGimmick" id="startGimmick-label">Start</label>
@@ -1020,12 +1020,12 @@ title: Battle Facilities Calculator
 						<option value="9">9</option>
 						<option value="10" selected="selected">10</option>
 					</select>
-					<input class="max calc-trigger btn-input" type="checkbox" id="maxR" /><label class="btn btn-wide gen-specific g8" style="width: 6.3em" for="maxR" title="Dynamax this Pokémon?">Dynamax <img src="../_images/dmax.png" style="vertical-align: middle"></label>
+					<input class="max calc-trigger btn-input" type="checkbox" id="maxR" /><label class="btn btn-wide gen-specific g8" style="width: 6.3em" for="maxR" title="Dynamax this Pokémon?">Dynamax <img src="{{ site.baseurl }}/_images/dmax.png" style="vertical-align: middle"></label>
 				</div>
 				<div class="gen-specific g9">
                     <label>Tera Type</label>
                     <select class="tera-type terrain-trigger calc-trigger"></select>
-                    <input class="tera calc-trigger btn-input" type="checkbox" id="teraR" /><label class="btn btn-wide gen-specific g9" for="teraR" style="width: 7em" title="Terastallize this Pokémon?">Terastallize <img src="../_images/tera.png" style="vertical-align: middle"></label>
+                    <input class="tera calc-trigger btn-input" type="checkbox" id="teraR" /><label class="btn btn-wide gen-specific g9" for="teraR" style="width: 7em" title="Terastallize this Pokémon?">Terastallize <img src="{{ site.baseurl }}/_images/tera.png" style="vertical-align: middle"></label>
                 </div>
 			</div>
 			<div class="move1">
@@ -1085,25 +1085,25 @@ title: Battle Facilities Calculator
 </div>
 
 
-<script type="text/javascript" src="../_scripts/select2.min.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/pokedex.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen3_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen4_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen5_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen6_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen7_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen8_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen80_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/stat_data.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/type_data.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/nature_data.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/ability_data.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/item_data.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/move_data.js"></script>
-<script type="text/javascript" src="../_scripts/shared_calc.js"></script>
-<script type="text/javascript" src="../_scripts/ap_calc.js"></script>
-<script type="text/javascript" src="../_scripts/damage_modern.js"></script>
-<script type="text/javascript" src="../_scripts/damage_gen4.js"></script>
-<script type="text/javascript" src="../_scripts/damage_gen3.js"></script>
-<script type="text/javascript" src="../_scripts/ko_chance.js"></script>
-<script type="text/javascript" src="../_scripts/export.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/select2.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/pokedex.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen3_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen4_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen5_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen6_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen7_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen8_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen80_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/stat_data.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/type_data.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/nature_data.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/ability_data.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/item_data.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/move_data.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/shared_calc.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/ap_calc.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/damage_modern.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/damage_gen4.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/damage_gen3.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/ko_chance.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/export.js"></script>
