--- a/honkalculate.html
+++ b/honkalculate.html
@@ -358,12 +358,12 @@ title: Battle Facilities Mass Calculator
                             <option value="9">9</option>
                             <option value="10" selected="selected">10</option>
                         </select>
-                        <input class="max calc-trigger btn-input" type="checkbox" id="maxL" /><label class="btn btn-wide gen-specific g8" for="maxL" style="width: 6.3em" title="Dynamax this Pokémon?">Dynamax <img src="../_images/dmax.png" style="vertical-align: middle"></label>
+                        <input class="max calc-trigger btn-input" type="checkbox" id="maxL" /><label class="btn btn-wide gen-specific g8" for="maxL" style="width: 6.3em" title="Dynamax this Pokémon?">Dynamax <img src="{{ site.baseurl }}/_images/dmax.png" style="vertical-align: middle"></label>
                     </div>
                     <div class="gen-specific g9">
                         <label>Tera Type</label>
                         <select class="tera-type terrain-trigger calc-trigger"></select>
-                        <input class="tera calc-trigger btn-input" type="checkbox" id="teraL" /><label class="btn btn-wide gen-specific g9" for="teraL" style="width: 7em" title="Terastallize this Pokémon?">Terastallize <img src="../_images/tera.png" style="vertical-align: middle"></label>
+                        <input class="tera calc-trigger btn-input" type="checkbox" id="teraL" /><label class="btn btn-wide gen-specific g9" for="teraL" style="width: 7em" title="Terastallize this Pokémon?">Terastallize <img src="{{ site.baseurl }}/_images/tera.png" style="vertical-align: middle"></label>
                     </div>
                 </div>
                 <div class="move1">
@@ -618,10 +618,10 @@ title: Battle Facilities Mass Calculator
                 </div>
                 <div class="btn-group gen-specific g7">
                     <div class="left" title="Has this Pokemon used Z-Conversion or Clangorous Soulblaze?">
-                        <input class="btn-input calc-trigger" type="checkbox" id="clangL" /><label class="btn btn-xxwide" for="clangL"><img src="../_images/PZ.png"><img src="../_images/kommo.png"><br>+1 All</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="clangL" /><label class="btn btn-xxwide" for="clangL"><img src="{{ site.baseurl }}/_images/PZ.png"><img src="{{ site.baseurl }}/_images/kommo.png"><br>+1 All</label>
                     </div>
                     <div class="right" title="Has this Pokemon used Z-Conversion or Clangorous Soulblaze?">
-                        <input class="btn-input calc-trigger" type="checkbox" id="clangR" /><label class="btn btn-xxwide" for="clangR"><img src="../_images/PZ.png"><img src="../_images/kommo.png"><br>+1 All</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="clangR" /><label class="btn btn-xxwide" for="clangR"><img src="{{ site.baseurl }}/_images/PZ.png"><img src="{{ site.baseurl }}/_images/kommo.png"><br>+1 All</label>
                     </div>
                 </div>
                 <div class="btn-group gen-specific g8 g9">
@@ -634,18 +634,18 @@ title: Battle Facilities Mass Calculator
                 </div>
                 <div class="btn-group gen-specific g8 g9">
                     <div class="left" title="Has this Pokemon had its Weakness Policy activated?">
-                        <input class="btn-input calc-trigger" type="checkbox" id="wpL" /><label class="btn btn-xxwide" for="wpL"><img src="../_images/wp.png"><br>Weakness Policy</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="wpL" /><label class="btn btn-xxwide" for="wpL"><img src="{{ site.baseurl }}/_images/wp.png"><br>Weakness Policy</label>
                     </div>
                     <div class="right" title="Has this Pokemon had its Weakness Policy activated?">
-                        <input class="btn-input calc-trigger" type="checkbox" id="wpR" /><label class="btn btn-xxwide" for="wpR"><img src="../_images/wp.png"><br>Weakness Policy</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="wpR" /><label class="btn btn-xxwide" for="wpR"><img src="{{ site.baseurl }}/_images/wp.png"><br>Weakness Policy</label>
                     </div>
                 </div>
                 <div class="btn-group gen-specific g7 g9">
                     <div class="left" title="Has this Pokemon had all its stats sharply raised? (gen 9 sprites by @ezerart_/Ezerart)">
-                        <input class="btn-input calc-trigger" type="checkbox" id="evoL" /><label class="btn btn-xxwide" for="evoL"><img class="evo_img1" src="../_images/eevee.png"><img class="evo_img2" src="../_images/eevium.png"><br>+2 All</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="evoL" /><label class="btn btn-xxwide" for="evoL"><img class="evo_img1" src="{{ site.baseurl }}/_images/eevee.png"><img class="evo_img2" src="{{ site.baseurl }}/_images/eevium.png"><br>+2 All</label>
                     </div>
                     <div class="right" title="Has this Pokemon had all its stats sharply raised? (gen 9 sprites by @ezerart_/Ezerart)">
-                        <input class="btn-input calc-trigger" type="checkbox" id="evoR" /><label class="btn btn-xxwide" for="evoR"><img class="evo_img1" src="../_images/eevee.png"><img class="evo_img2" src="../_images/eevium.png"><br>+2 All</label>
+                        <input class="btn-input calc-trigger" type="checkbox" id="evoR" /><label class="btn btn-xxwide" for="evoR"><img class="evo_img1" src="{{ site.baseurl }}/_images/eevee.png"><img class="evo_img2" src="{{ site.baseurl }}/_images/eevium.png"><br>+2 All</label>
                     </div>
                 </div>
                 <div class="btn-group gen-specific g8 g9">
@@ -709,13 +709,13 @@ title: Battle Facilities Mass Calculator
     </div><!--End Damage Results panel-->
 </div>
 <!--The css for the dataTable used in Damage Results-->
-<link type="text/css" rel="stylesheet" href="../_css/datatables.css">
-<link type="text/css" rel="stylesheet" href="../_css/colvis.css">
+<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/_css/datatables.css">
+<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/_css/colvis.css">
 <!-- jquery.dataTables is incompatible with newer versions of jQuery -->
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script> <!-- to be replaced (probably) -->
 <script type="text/javascript" src="https://cdn.datatables.net/1.10.4/js/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/colvis/1.1.1/js/dataTables.colVis.min.js"></script>
-<script type="text/javascript" src="../_scripts/url-search-params-0.1.2.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/url-search-params-0.1.2.min.js"></script>
 <script type="text/javascript">
     this.__createBinding = function(o, m, k, k2) {
         if (k2 === undefined) k2 = k;
@@ -724,26 +724,26 @@ title: Battle Facilities Mass Calculator
     var calc = exports = {};
     function require() { return exports; };
 </script>
-<script type="text/javascript" src="../_scripts/import_custom.js"></script>
-<script type="text/javascript" src="../_scripts/select2.min.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/pokedex.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen3_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen4_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen5_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen6_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen7_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen8_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/setdex_gen80_sets.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/stat_data.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/type_data.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/nature_data.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/ability_data.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/item_data.js"></script>
-<script type="text/javascript" src="../_scripts/game_data/move_data.js"></script>
-<script type="text/javascript" src="../_scripts/shared_calc.js"></script>
-<script type="text/javascript" src="../_scripts/damage_modern.js"></script>
-<script type="text/javascript" src="../_scripts/damage_gen4.js"></script>
-<script type="text/javascript" src="../_scripts/damage_gen3.js"></script>
-<script type="text/javascript" src="../_scripts/ko_chance.js"></script>
-<script type="text/javascript" src="../_scripts/export.js"></script>
-<script type="text/javascript" src="../_scripts/honkalculate_calc.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/import_custom.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/select2.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/pokedex.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen3_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen4_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen5_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen6_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen7_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen8_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/setdex_gen80_sets.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/stat_data.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/type_data.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/nature_data.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/ability_data.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/item_data.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/game_data/move_data.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/shared_calc.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/damage_modern.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/damage_gen4.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/damage_gen3.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/ko_chance.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/export.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/_scripts/honkalculate_calc.js"></script>
